--- a/use/using-gradle-plugin/index.html
+++ b/use/using-gradle-plugin/index.html
@@ -700,7 +700,7 @@ generated for the variants and flavors used in the project.</p>
 <a id="__codelineno-9-21" name="__codelineno-9-21" href="#__codelineno-9-21"></a><span class="w">    </span><span class="n">includeClasses</span><span class="p">.</span><span class="na">set</span><span class="p">(</span><span class="kc">true</span><span class="o">/</span><span class="kc">false</span><span class="p">)</span><span class="w"> </span><span class="c1">// Default: true</span>
 <a id="__codelineno-9-22" name="__codelineno-9-22" href="#__codelineno-9-22"></a>
 <a id="__codelineno-9-23" name="__codelineno-9-23" href="#__codelineno-9-23"></a><span class="w">    </span><span class="c1">// ONLY show unstable composables in the report without stats and classes</span>
-<a id="__codelineno-9-24" name="__codelineno-9-24" href="#__codelineno-9-24"></a><span class="w">    </span><span class="n">showOnlyUnstableComposables</span><span class="w"> </span><span class="o">=</span><span class="w"> </span><span class="kc">true</span><span class="o">/</span><span class="kc">false</span><span class="w"> </span><span class="c1">// Default: false</span>
+<a id="__codelineno-9-24" name="__codelineno-9-24" href="#__codelineno-9-24"></a><span class="w">    </span><span class="n">showOnlyUnstableComposables</span><span class="p">.</span><span class="na">set</span><span class="p">(</span><span class="kc">true</span><span class="o">/</span><span class="kc">false</span><span class="p">)</span><span class="w"> </span><span class="c1">// Default: false</span>
 <a id="__codelineno-9-25" name="__codelineno-9-25" href="#__codelineno-9-25"></a><span class="p">}</span>
 </code></pre></div>
 </div>
